# ai-toolbox

./: .gitignore  COMMANDS.md  CONFIG.md  README.md  SERVER.md  WORKFLOWS.md  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
src/aitoolbox/client/: commands.py
src/aitoolbox/server/: llm.py  server.py  state.py
src/test/: testState.py
tests/: test_state.py
