[build-system]
build-backend = "hatchling.build"
requires = ["hatchling", "hatch-requirements-txt"]

[project]
name = "ai-toolbox"
version = "0.0.1"
authors = [{name = "Omri Bloch", email = "omri.bloch@gmail.com"}]
requires-python = ">= 3.8"
dynamic = ["dependencies"]
readme = "README.md"

[tool.hatch.metadata.hooks.requirements_txt]
files = ["requirements.txt"]

[tool.hatch.build.targets.wheel]
packages = ["src/aitoolbox"]

[project.scripts]
ai-server = "aitoolbox.server.server:main"
ai-msg = "aitoolbox.client.commands:message"